2024q2 report: Misc tweaks
Minor fixes.

Submitted by: Pau Amma
Sponsored by: Netflix

--- a/website/content/en/status/report-2024-04-2024-06/github.adoc
+++ b/website/content/en/status/report-2024-04-2024-06/github.adoc
@@ -13,20 +13,20 @@ In general, pull requests should only be for things that are user-visible, add v
 
 Current status:
 
- * We are able to keep up with the pull requests doing everything by hand, but only if do it at least weekly.
- * We have discoverd the by-hand process is tedious and error-prone.
+ * We are able to keep up with the pull requests doing everything by hand, but only if we do it at least weekly.
+ * We have discovered the by-hand process is tedious and error-prone.
  * We can stage multiple pull requests in a testing branch so we can batch-up testing.
- * We can automatically land the result so merged pull requests show up as merged in github infrastructure.
+ * We can automatically land the result so merged pull requests show up as merged in GitHub infrastructure.
 
 We need help with automating the process:
 
  * Add automated testing that's context specific (for example, run igor over man pages).
- * Add build/install tests that test boot the resulting image.
+ * Add build/install tests that test-boot the resulting image.
  * Automate common tasks, like man page corrections, into staging process.
  * Add simple smoke testing for the staging branch for tier 1 architectures.
- * Investigate optionally integrating Jenkins testing to scale-up the size of changes we can accept.
+ * Investigate optionally integrating Jenkins testing to scale up the size of changes we can accept.
  * Integrate with Bugzilla problem reports and Phabricator reviews.
- * Improve the submitter experience on github by automating common feedback to mistakes in the pull requests.
+ * Improve the submitter experience on GitHub by automating common feedback to mistakes in the pull requests.
  * Create checklists for submitters to reduce errors.
  * Create better reporting about pull requests, especially the frequent contributors of good pull requests.
 
