--- a/documentation/content/en/articles/freebsd-releng/_index.adoc
+++ b/documentation/content/en/articles/freebsd-releng/_index.adoc
@@ -776,6 +776,9 @@ When a release reaches End-of-Life, references to that release should be removed
 |[.filename]#~/website/content/en/security/_index.adoc#
 |Remove the branch from the supported branch list.
 
+|[.filename]#~/website/content/en/security/unsupported.adoc#
+|Add the branch to the unsupported branch list.
+
 |[.filename]#~/website/content/en/where.adoc#
 |Remove the URLs for the release.
 
