--- a/website/content/en/security/unsupported.adoc
+++ b/website/content/en/security/unsupported.adoc
@@ -60,4 +60,5 @@ The following releases are no longer supported but are listed here for reference
 |releng/12.4 |12.4-RELEASE |n/a |December 5, 2022 |December 31, 2023
 |releng/13.0 |13.0-RELEASE |n/a |April 13, 2021 |August 31, 2022
 |releng/13.1 |13.1-RELEASE |n/a |May 16, 2022 |July 31, 2023
+|releng/13.2 |13.2-RELEASE |n/a |April 11, 2023 |June 30, 2024
 |===
