--- a/website/content/en/releng/_index.adoc
+++ b/website/content/en/releng/_index.adoc
@@ -33,6 +33,7 @@ General information about committing to -STABLE.
 |===
 |Date |Event |Information
 |September 2024 |FreeBSD 13.4 |link:../releases/13.4R/schedule/[Target Schedule]
+|December 2024 |FreeBSD 14.2 |link:../releases/14.2R/schedule/[Target Schedule]
 |===
 
 [[freeze]]
