software-license: Small tweak
Use one line per sentence for the paragraphs.

Sponsored by:		Netflix

--- a/website/content/en/internal/software-license.adoc
+++ b/website/content/en/internal/software-license.adoc
@@ -7,13 +7,18 @@ sidenav: docs
 
 == Philosophy
 
-The FreeBSD Project aims to produce a complete, BSD-licensed operating system allowing consumers of the system to produce derivative products without constraint or further license obligations. We invite and greatly appreciate the contribution of both changes and additions under the two-clause BSD license, and encourage the adoption of this license by other open source projects. Use of the BSD license is key to encouraging the adoption of advanced operating system technology, and on many notable occasions has been pivotal to widespread use of new technology.
+The FreeBSD Project aims to produce a complete, BSD-licensed operating system allowing consumers of the system to produce derivative products without constraint or further license obligations.
+We invite and greatly appreciate the contribution of both changes and additions under the two-clause BSD license, and encourage the adoption of this license by other open source projects.
+Use of the BSD license is key to encouraging the adoption of advanced operating system technology, and on many notable occasions has been pivotal to widespread use of new technology.
 
 We accept however that compelling reasons exist to allow differently-licensed software to be included in the FreeBSD source tree.
 
-We require any software under alternative licenses to be carefully isolated in the source tree so that it cannot contaminate BSD-only components. Such cautious management encourages licensing clarity and facilitates the production of BSD-only derivative products.
+We require any software under alternative licenses to be carefully isolated in the source tree so that it cannot contaminate BSD-only components.
+Such cautious management encourages licensing clarity and facilitates the production of BSD-only derivative products.
 
-Unless a special exception is made, no existing BSD-licensed components may be replaced with differently-licensed software. We instead encourage FreeBSD and third party developers to seek the relicensing or reimplementation of critical components under the BSD license. Such would ease their more integral adoption into the FreeBSD operating system.
+Unless a special exception is made, no existing BSD-licensed components may be replaced with differently-licensed software.
+We instead encourage FreeBSD and third party developers to seek the relicensing or reimplementation of critical components under the BSD license.
+Such would ease their more integral adoption into the FreeBSD operating system.
 
 == Policy
 
