software-license: Add xref to SPDX
Sponsored by:		Netflix

--- a/website/content/en/internal/software-license.adoc
+++ b/website/content/en/internal/software-license.adoc
@@ -156,3 +156,6 @@ The following licenses are considered to be acceptable BSD-Like Licenses for the
  * THE SOFTWARE.
  */
 ....
+
+* It is acceptable to use use only the SPDX-License-Identifier
+** See https://spdx.github.io/spdx-spec/[Annex D of SPDX Standard] for definition of standard SPDX-License-Identifier expressions used, how to interpret them and where to find the license text(s) that are applicable.
