--- a/shared/authors.adoc
+++ b/shared/authors.adoc
@@ -3738,7 +3738,7 @@
 :core-secretary-email: core-secretary@FreeBSD.org
 
 // FreeBSD Doc Engineering Team
-:doceng-members: {bcr}, {blackend}, {dbaio}, {fernape}, {hrs}, {carlavilla}
+:doceng-members: {blackend}, {carlavilla}, {dbaio}, {fernape}, {hrs}
 :doceng-secretary-email: <doceng-secretary@FreeBSD.org>
 
 // FreeBSD Donations Liaison
