Add section about automatic runtime directories handling since FreeBSD 14.1
FreeBSD 14.1 added functionality to automatically create XDG runtime
directories needed for Wayland to run. Add a section describing this
and how to handle it in pre-14.1 releases.
I changed the resulting diff to use active voice in the last sentence.

Reported by:		concussious.bugzilla_runbox.com
Approved by:		manu, lwhsu,x11
Differential Revision:	https://reviews.freebsd.org/D45953

--- a/documentation/content/en/books/handbook/wayland/_index.adoc
+++ b/documentation/content/en/books/handbook/wayland/_index.adoc
@@ -125,7 +125,9 @@ Begin by installing the following packages:
 
 Once the protocol and supporting packages have been installed, a compositor must create the user interface.
 Several compositors will be covered in the following sections.
-All compositors using Wayland will need a runtime directory defined in the environment, which can be achieved with the following command in the bourne shell:
+All compositors using Wayland will need a runtime directory defined in the environment.
+Since FreeBSD 14.1, this is created and defined automatically.
+For previous versions, this is achieved with the following command in the bourne shell:
 
 [source,shell]
 ----
