2024Q2/gcc.adoc: typo fixed

--- a/website/content/en/status/report-2024-04-2024-06/gcc.adoc
+++ b/website/content/en/status/report-2024-04-2024-06/gcc.adoc
@@ -10,7 +10,7 @@ link:https://gcc.gnu.org/gcc-14/[GCC 14 release series] URL: link:https://gcc.gn
 Contact: Lorenzo Salvadore <salvadore@FreeBSD.org>
 
 Upstream has released link:https://gcc.gnu.org/gcc-14[GCC 14.1].
-Therefore port package:lang/gcc-14[] has been created, as well as package:lang/gcc15-devel[] which tracks the new latest developement GCC version.
+Therefore port package:lang/gcc-14[] has been created, as well as package:lang/gcc15-devel[] which tracks the new latest development GCC version.
 Previous major versions of GCC are being updated as well.
 
 Only very little work has been done on existing bugs for GCC ports this quarter, contrary to the original plan stated in the precedent report.
