website: Retire last remaining bits of 13.2.

--- a/website/content/en/releng/_index.adoc
+++ b/website/content/en/releng/_index.adoc
@@ -52,7 +52,7 @@ This table lists the code freeze status for major branches of the `src/` reposit
 |`stable/13` |Open |committers |Development branch for FreeBSD 13-STABLE.
 |`releng/13.4` |Frozen |re@FreeBSD.org |FreeBSD 13.4 supported errata fix branch.
 |`releng/13.3` |Frozen |security-officer@FreeBSD.org |FreeBSD 13.3 supported errata fix branch.
-|`releng/13.2` |Frozen |security-officer@FreeBSD.org |FreeBSD 13.2 supported errata fix branch.
+|`releng/13.2` |Frozen |security-officer@FreeBSD.org |FreeBSD 13.2 errata fix branch (not officially supported).
 |`releng/13.1` |Frozen |security-officer@FreeBSD.org |FreeBSD 13.1 errata fix branch (not officially supported).
 |`releng/13.0` |Frozen |security-officer@FreeBSD.org |FreeBSD 13.0 errata fix branch (not officially supported).
 |`stable/12` |Open |committers |Maintenance branch for FreeBSD 12-STABLE (not officially supported).
