website: FreeBSD 12 is EOL

--- a/website/content/en/platforms/ppc.adoc
+++ b/website/content/en/platforms/ppc.adoc
@@ -55,7 +55,7 @@ The most up-to-date information about supported hardware is currently being main
 === How can I install FreeBSD/ppc?
 
 ISO images of FreeBSD {rel130-current} are available for download, for details on how to obtain these see the link:../../releases/{rel130-current}R/announce/[release announcement.]
-FreeBSD 12.x is not being maintained regularly and its use is *strongly discouraged*. ABI changes makes 12.x binary-incompatible with 13.x and later.
+FreeBSD 12.x is not supported any more and its use is *strongly discouraged*. ABI changes makes 12.x binary-incompatible with 13.x and later.
 
 [[ports]]
 === How to use ports on FreeBSD/ppc?
