--- a/website/content/en/releases/14.2R/errata.adoc
+++ b/website/content/en/releases/14.2R/errata.adoc
@@ -1,11 +1,11 @@
 ---
-title: "FreeBSD X.0-RELEASE Errata"
+title: "FreeBSD 14.2-RELEASE Errata"
 sidenav: download
 ---
 
-:release: X.0-RELEASE
-:releaseNext: X.1-RELEASE
-:releaseBranch: X-STABLE
+:release: 14.2-RELEASE
+:releaseNext: 14.3-RELEASE
+:releaseBranch: 14-STABLE
 
 = FreeBSD {release} Errata
 
