--- a/website/content/en/releases/14.2R/installation.adoc
+++ b/website/content/en/releases/14.2R/installation.adoc
@@ -1,10 +1,10 @@
 ---
-title: "FreeBSD X.0-RELEASE Installation Instructions"
+title: "FreeBSD 14.2-RELEASE Installation Instructions"
 sidenav: download
 ---
 
-:releaseCurrent: X.0-RELEASE
-:localRel: X.0
+:releaseCurrent: 14.2-RELEASE
+:localRel: 14.2
 
 include::shared/en/urls.adoc[]
 
