--- a/website/content/en/releases/14.2R/schedule.adoc
+++ b/website/content/en/releases/14.2R/schedule.adoc
@@ -1,13 +1,13 @@
 ---
-title: "FreeBSD X.0 Release Process"
+title: "FreeBSD 14.2 Release Process"
 sidenav: download
 ---
 
 = FreeBSD {localRel} Release Process
-:localRel: X.0
+:localRel: 14.2
 :localBranchHead: head
-:localBranchStable: stable/X
-:localBranchReleng: releng/X.0
+:localBranchStable: stable/14
+:localBranchReleng: releng/14.2
 
 include::shared/en/urls.adoc[]
 
