--- a/website/content/en/releases/14.2R/hardware.adoc
+++ b/website/content/en/releases/14.2R/hardware.adoc
@@ -1,9 +1,9 @@
 ---
-title: FreeBSD X.0 Hardware Notes
+title: FreeBSD 14.2 Hardware Notes
 sidenav: download
 ---
 
-= FreeBSD X.0 Hardware Notes
+= FreeBSD 14.2 Hardware Notes
 :doctype: article
 :toc: macro
 :toclevels: 1
@@ -17,7 +17,7 @@ toc::[]
 [[intro]]
 == Introduction
 
-This document contains the hardware compatibility notes for FreeBSD X.0.
+This document contains the hardware compatibility notes for FreeBSD 14.2.
 It lists the hardware platforms supported by FreeBSD, as well as the various types of hardware devices (storage controllers, network interfaces, and so on), along with known working instances of these devices.
 
 [[proc]]
