--- a/website/content/en/releases/14.2R/schedule.adoc
+++ b/website/content/en/releases/14.2R/schedule.adoc
@@ -4,6 +4,7 @@ sidenav: download
 ---
 
 = FreeBSD {localRel} Release Process
+:localRelPrev: 14.1
 :localRel: 14.2
 :localBranchHead: head
 :localBranchStable: stable/14
@@ -16,7 +17,7 @@ include::shared/en/urls.adoc[]
 This is the release schedule for FreeBSD {localRel}.
 For more information about the release engineering process, please see the link:../../../releng/[Release Engineering] section of the web site.
 
-General discussions about the pending release and known issues should be sent to the public mailto:FreeBSD-current@FreeBSD.org[freebsd-current] mailing list.
+General discussions about the pending release and known issues should be sent to the public mailto:FreeBSD-stable@FreeBSD.org[freebsd-stable] mailing list.
 
 // link:{handbook}glossary/#mfc-glossary[MFC] requests should be sent to link:mailto:re@FreeBSD.org[re@FreeBSD.org] following the link:https://wiki.freebsd.org/Releng/ChangeRequestGuidelines[Change Request Guidelines].
 
@@ -26,16 +27,23 @@ General discussions about the pending release and known issues should be sent to
 
 == Schedule
 
-During the {localBranchHead} freeze, the Release Engineering Team may create ALPHA snapshots to publish for testing purposes.
-As the frequency and total number of the ALPHA snapshots will depend on the length of time the {localBranchHead} branch is frozen, no official schedule is provided.
-
-Announcements regarding the availability of the ALPHA snapshots will be sent to the mailto:freebsd-current@FreeBSD.org[freebsd-current] and mailto:freebsd-snapshots@FreeBSD.org[freebsd-snapshots] mailing lists.
-
 [.tblbasic]
 [cols=",,,",options="header",]
 |===
 |Action |Expected |Actual |Description
-
+|Initial release schedule announcement |- |29 July 2024|Release Engineers send announcement email to developers with a rough schedule.
+|Release schedule reminder |7 October 2024 |- |Release Engineers send reminder announcement e-mail to developers with updated schedule.
+|Code slush begins |18 October 2024 |- |Release Engineers announce that all further commits to the {localBranchStable} branch will not require explicit approval, however new features should be avoided.
+|{localBranchReleng} branch |1 November 2024 |- |{localBranchReleng} branch created; future release engineering proceeds on this branch.
+|BETA1 builds begin |1 November 2024 |- |First beta test snapshot.
+|BETA2 builds begin |8 November 2024 |- |Second beta test snapshot.
+|BETA3 builds begin |15 November 2024 |- |Third beta test snapshot.
+|RC1 builds begin |22 November 2024 |- |First release candidate.
+|RELEASE builds begin |29 November 2024 |- |{localRel}-RELEASE builds begin.
+|RELEASE announcement |3 December 2024 |- |{localRel}-RELEASE press release.
+|{localRelPrev} EoL |31 March 2025 |- |{localRelPrev}-RELEASE no longer supported.
+|{localRel} EoL |30 September 2025 |- |{localRel}-RELEASE no longer supported.
+|{localBranchStable} EoL |30 November 2028 |- |{localBranchStable} no longer supported.
 |===
 
 "*" indicates "as-needed" items.
