--- a/shared/releases.adoc
+++ b/shared/releases.adoc
@@ -52,12 +52,12 @@
 
 // Set to 'INCLUDE' when the schedule is available.
 
-:beta2-upcoming: IGNORE
+:beta2-upcoming: INCLUDE
 
 // Set to 'INCLUDE' when the installation images are available.
 
 :beta2-testing: IGNORE
-:betarel2-current: 13.2
+:betarel2-current: 14.2
 :betarel2-vers: RELEASE
 :u-betarel2-schedule: https://www.FreeBSD.org/releases/{betarel2-current}R/schedule/
 
