--- a/website/content/en/releases/14.2R/hardware.adoc
+++ b/website/content/en/releases/14.2R/hardware.adoc
@@ -3,7 +3,7 @@ title: FreeBSD 14.2 Hardware Notes
 sidenav: download
 ---
 
-= FreeBSD 14.2 Hardware Notes
+:localRel: 14.2
 :doctype: article
 :toc: macro
 :toclevels: 1
@@ -12,12 +12,14 @@ sidenav: download
 :source-highlighter: rouge
 :experimental:
 
+= FreeBSD {localRel} Hardware Notes
+
 toc::[]
 
 [[intro]]
 == Introduction
 
-This document contains the hardware compatibility notes for FreeBSD 14.2.
+This document contains the hardware compatibility notes for FreeBSD {localRel}.
 It lists the hardware platforms supported by FreeBSD, as well as the various types of hardware devices (storage controllers, network interfaces, and so on), along with known working instances of these devices.
 
 [[proc]]
