--- a/website/content/en/releases/14.2R/installation.adoc
+++ b/website/content/en/releases/14.2R/installation.adoc
@@ -4,6 +4,8 @@ sidenav: download
 ---
 
 :releaseCurrent: 14.2-RELEASE
+:releasePrev: 14.1-RELEASE
+:releasePrevLegacy: 13.4-RELEASE
 :localRel: 14.2
 
 include::shared/en/urls.adoc[]
@@ -40,7 +42,7 @@ For Git use the releng/{localRel} branch which will be where any upcoming Securi
 == Upgrading Using "FreeBSD Update"
 
 The man:freebsd-update[8] utility supports binary upgrades of amd64, arm64, and i386 systems running earlier FreeBSD releases.
-Systems running 13.4-RELEASE or 14.1-RELEASE can upgrade as follows:
+Systems running {releasePrevLegacy} or {releasePrev} can upgrade as follows:
 
 [.screen]
 ----
