--- a/website/content/en/releases/14.2R/schedule.adoc
+++ b/website/content/en/releases/14.2R/schedule.adoc
@@ -9,6 +9,7 @@ sidenav: download
 :localBranchHead: head
 :localBranchStable: stable/14
 :localBranchReleng: releng/14.2
+:localMailingList: stable
 
 include::shared/en/urls.adoc[]
 
@@ -17,7 +18,7 @@ include::shared/en/urls.adoc[]
 This is the release schedule for FreeBSD {localRel}.
 For more information about the release engineering process, please see the link:../../../releng/[Release Engineering] section of the web site.
 
-General discussions about the pending release and known issues should be sent to the public mailto:FreeBSD-stable@FreeBSD.org[freebsd-stable] mailing list.
+General discussions about the pending release and known issues should be sent to the public mailto:FreeBSD-{localMailingList}@FreeBSD.org[freebsd-{localMailingList}] mailing list.
 
 // link:{handbook}glossary/#mfc-glossary[MFC] requests should be sent to link:mailto:re@FreeBSD.org[re@FreeBSD.org] following the link:https://wiki.freebsd.org/Releng/ChangeRequestGuidelines[Change Request Guidelines].
 
