--- a/shared/releases.adoc
+++ b/shared/releases.adoc
@@ -37,7 +37,7 @@
 
 // Set to 'INCLUDE' when the schedule is available.
 
-:beta-upcoming: INCLUDE
+:beta-upcoming: IGNORE
 
 // Set to 'INCLUDE' when the installation images are available.
 
@@ -106,6 +106,18 @@
 :u-rel140-installation: https://www.FreeBSD.org/releases/{rel140-current}R/installation/
 :u-rel140-readme: https://www.FreeBSD.org/releases/{rel140-current}R/readme/
 :u-rel140-signatures: https://www.FreeBSD.org/releases/{rel140-current}R/signatures/
+
+:rel134-current-major: 13
+:rel134-current: 13.4
+:rel134-current-date: September 3, 2024
+
+:u-rel134-notes: https://www.FreeBSD.org/releases/{rel134-current}R/relnotes/
+:u-rel134-announce: https://www.FreeBSD.org/releases/{rel134-current}R/announce/
+:u-rel134-errata: https://www.FreeBSD.org/releases/{rel134-current}R/errata/
+:u-rel134-hardware: https://www.FreeBSD.org/releases/{rel134-current}R/hardware/
+:u-rel134-installation: https://www.FreeBSD.org/releases/{rel134-current}R/installation/
+:u-rel134-readme: https://www.FreeBSD.org/releases/{rel134-current}R/readme/
+:u-rel134-signatures: https://www.FreeBSD.org/releases/{rel134-current}R/signatures/
 
 :rel133-current-major: 13
 :rel133-current: 13.3
