--- a/website/content/en/releases/13.4R/schedule.adoc
+++ b/website/content/en/releases/13.4R/schedule.adoc
@@ -35,7 +35,7 @@ General discussions about the pending release and known issues should be sent to
 |Code slush begins |19 July 2024 |20 July 2024 |Release Engineers announce that all further commits to the {localBranchStable} branch will not require explicit approval, however new features should be avoided.
 |{localBranchReleng} branch |2 August 2024 |2 August 2024 |{localBranchReleng} branch created; future release engineering proceeds on this branch.
 |BETA1 builds begin |2 August 2024 |2 August 2024 |First beta test snapshot.
-|BETA2 builds begin |9 August 2024 |- |Second beta test snapshot.
+|BETA2 builds begin |9 August 2024 |9 August 2024 |Second beta test snapshot.
 |BETA3 builds begin |16 August 2024 |- |Third beta test snapshot.
 |RC1 builds begin |23 August 2024 |- |First release candidate.
 |RELEASE builds begin |30 August 2024 |- |{localRel}-RELEASE builds begin.
