Add advisories affecting 13.3R, 14.0R, and 14.1R
FreeBSD-SA-24:04.openssh
FreeBSD-SA-24:05.pf
FreeBSD-SA-24:06.ktrace
FreeBSD-SA-24:07.nfsclient
FreeBSD-SA-24:08.openssh

Also include FreeBSD-SA-24:04.openssh in the 13.2R release notes since
the security team patched that release, despite it going out of support
one day before.

--- a/website/content/en/releases/13.2R/errata.adoc
+++ b/website/content/en/releases/13.2R/errata.adoc
@@ -63,6 +63,7 @@ For a list of all FreeBSD CERT security advisories, see https://www.FreeBSD.org/
 |link:https://www.FreeBSD.org/security/advisories/FreeBSD-SA-24:01.bhyveload.asc[FreeBSD-SA-24:01.bhyveload] |14 February 2024 |bhyveload(8) host file access
 |link:https://www.FreeBSD.org/security/advisories/FreeBSD-SA-24:02.tty.asc[FreeBSD-SA-24:02.tty] |14 February 2024 |jail(2) information leak
 |link:https://www.FreeBSD.org/security/advisories/FreeBSD-SA-24:03.unbound.asc[FreeBSD-SA-24:03.unbound] |28 March 2024 |Multiple vulnerabilities in unbound
+|link:https://www.FreeBSD.org/security/advisories/FreeBSD-SA-24:04.openssh.asc[FreeBSD-SA-24:04.openssh] |1 July 2024 |OpenSSH pre-authentication remote code execution
 |===
 
 [[errata]]
